# libsimd

./: CMakeLists.txt  LICENSE  avx-convert.h  avx-double.h  avx-float.h  avx-int.h  ipp_allocator.h  ipp_exception.h  ipps_fft.h  neon.h  nosimd.h  ocl.cpp  ocl.h  ocl_kernels.h  simd.h  sse-double.cpp  sse-double.h  sse-float.cpp  sse-float.h  sse-i128.h  sse-int.h  sse.cpp  sse.h  sse_ipp.cpp  sse_ipp.h  unroll4.h
test/: CMakeLists.txt  compare.h  opencl_info.cpp  test-arithm.cpp  test-common.cpp  test-convert.cpp
